--- a/history.html
+++ b/history.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Transaction History</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="history.css">
   <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-  <script defer src="script.js"></script>
+  <script defer src="history.js"></script>
 </head>
 <body>
   <div class="transaction-list" id="transaction-list">
