--- a/history.html
+++ b/history.html
@@ -2,16 +2,159 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Transaction History</title>
-  <link rel="stylesheet" href="history.css">
-  <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-  <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-  <script defer src="history.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .transaction-list {
+      max-width: 600px;
+      margin: auto;
+    }
+
+    .transaction {
+      background-color: #111;
+      border-left: 5px solid #295FFF;
+      margin-bottom: 15px;
+      padding: 15px;
+      border-radius: 8px;
+    }
+
+    .transaction.deposit {
+      border-left-color: #00c853;
+    }
+
+    .transaction.withdraw {
+      border-left-color: #d50000;
+    }
+
+    .amount.deposit {
+      color: #00c853;
+      font-weight: bold;
+    }
+
+    .amount.withdraw {
+      color: #d50000;
+      font-weight: bold;
+    }
+
+    .transaction small {
+      color: #bbb;
+    }
+
+    .status {
+      margin-top: 5px;
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+      gap: 8px;
+    }
+
+    .status.completed svg { fill: #00c853; }
+    .status.pending svg { fill: #ffab00; }
+    .status.processing svg { fill: #2979ff; }
+    .status.canceled svg { fill: #d50000; }
+  </style>
 </head>
 <body>
-  <div class="transaction-list" id="transaction-list">
-    <!-- Transactions will be inserted here -->
-  </div>
+  <h2>Transaction History</h2>
+  <div class="transaction-list" id="transactionList">Loading...</div>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+    import { getFirestore, doc, getDoc, collection, query, orderBy, getDocs } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDtCfsMkc_Z_9ZeF0TEHTDFBzLlkU-egSc",
+      authDomain: "tradevanta-a3e0d.firebaseapp.com",
+      projectId: "tradevanta-a3e0d",
+      storageBucket: "tradevanta-a3e0d.appspot.com",
+      messagingSenderId: "441098922985",
+      appId: "1:441098922985:web:163878a0ef5b2054f8b978"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    const transactionList = document.getElementById("transactionList");
+
+    const svgIcons = {
+      completed: `<svg width="18" height="18" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>`,
+      pending: `<svg width="18" height="18" viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 10 10A10.0114 10.0114 0 0 0 12 2Zm1 11h-5v-2h3V7h2Z"/></svg>`,
+      processing: `<svg width="18" height="18" viewBox="0 0 24 24"><path d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6a6.01 6.01 0 0 1-6 6 6.008 6.008 0 0 1-5.9-5H4.02a8.004 8.004 0 0 0 7.98 7 8 8 0 0 0 0-16z"/></svg>`,
+      canceled: `<svg width="18" height="18" viewBox="0 0 24 24"><path d="M18.3 5.71 12 12l6.3 6.29-1.41 1.42L12 13.41l-6.29 6.3-1.42-1.42L10.59 12 4.29 5.71 5.71 4.29 12 10.59l6.29-6.3z"/></svg>`
+    };
+
+    onAuthStateChanged(auth, async user => {
+      if (!user) {
+        transactionList.innerHTML = "<p>Please <a href='login.html' style='color:#295FFF;'>log in</a> to view your transactions.</p>";
+        return;
+      }
+
+      try {
+        const userDoc = await getDoc(doc(db, "users", user.uid));
+        const userCurrency = userDoc.exists() && userDoc.data().currency ? userDoc.data().currency : "USD";
+
+        const transactionsRef = collection(db, "users", user.uid, "transactions");
+        const q = query(transactionsRef, orderBy("timestamp", "desc"));
+        const snapshot = await getDocs(q);
+
+        if (snapshot.empty) {
+          transactionList.innerHTML = "<p>No transactions yet.</p>";
+          return;
+        }
+
+        transactionList.innerHTML = "";
+
+        snapshot.forEach(doc => {
+          const t = doc.data();
+          const type = t.type?.toLowerCase();
+          if (!["deposit", "withdraw"].includes(type)) return;
+
+          const amount = parseFloat(t.amount).toFixed(2);
+          if (amount === "0.00") return;
+
+          const sign = type === "deposit" ? "+" : "−";
+          const status = t.status ? t.status.toLowerCase() : (type === "withdraw" ? "pending" : "completed");
+
+          const statusText = {
+            completed: "Completed",
+            pending: "Pending",
+            processing: "Processing",
+            canceled: "Canceled"
+          }[status] || "Pending";
+
+          const statusClass = `status ${status}`;
+          const iconSVG = svgIcons[status] || svgIcons.pending;
+
+          const item = document.createElement("div");
+          item.className = `transaction ${type}`;
+          item.innerHTML = `
+            <div><strong>${type.charAt(0).toUpperCase() + type.slice(1)}</strong></div>
+            <div class="amount ${type}">${sign} ${userCurrency} ${amount}</div>
+            <small>Date: ${t.timestamp?.toDate().toLocaleString()}</small>
+            <div class="${statusClass}">${iconSVG} ${statusText}</div>
+          `;
+          transactionList.appendChild(item);
+        });
+
+      } catch (err) {
+        console.error("Error loading transactions:", err);
+        transactionList.innerHTML = "<p>Failed to load transactions.</p>";
+      }
+    });
+  </script>
 </body>
 </html>
